--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,13 @@
   "license": "MIT",
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.20.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
