--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.20.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
