feat: integrate Hyperliquid trading with vault deposit flow

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "hyperliquid": "^1.7.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "winston": "^3.11.0",
